<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/padding_6"
        android:paddingRight="@dimen/padding_6"
        android:paddingTop="@dimen/padding_10"
        android:paddingBottom="@dimen/padding_10">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/midl_text_size"
                android:gravity="center_horizontal"
                android:text="@string/tv_cal_date"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/midl_text_size"
                android:gravity="center_horizontal"
                android:text="@string/tv_cal_time"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_cal_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/big_text_size"
                android:gravity="center_horizontal" />
            <TextView
                android:id="@+id/tv_cal_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/big_text_size"
                android:gravity="center_horizontal" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_cal_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/color_icons"
                android:text="@string/btn_cal_date"
                />
            <Button
                android:id="@+id/btn_cal_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/color_icons"
                android:text="@string/btn_cal_time" />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_10"
            android:text="@string/tv_spn_t_holl"
            android:textSize="@dimen/midl_text_size"/>
        <Spinner
            android:id="@+id/spn_type_holl"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_10"
            android:text="@string/tv_count_people"
            android:textSize="@dimen/midl_text_size"/>
        <NumberPicker
            android:id="@+id/nump_count_people"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:width="100dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_10"
            android:text="@string/tv_et_description"
            android:textSize="@dimen/midl_text_size"/>
        <EditText
            android:id="@+id/et_order_t_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="2"/>
        <Button
            android:id="@+id/btn_set_order_table"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/padding_10"
            android:text="@string/btn_order_table"
            style="@style/Widget.AppCompat.Button.Borderless"/>
    </LinearLayout>
</ScrollView>