<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".5">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/cv_padding_6"
        android:textSize="@dimen/big_text_size"
        android:text="@string/tv_my_order"/>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_order"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />
        </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom">
        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/cv_padding_6">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_count_order"
                android:paddingLeft="@dimen/cv_padding_6"
                android:textSize="@dimen/midl_text_size"
                android:layout_gravity="left" />
            <TextView
                android:id="@+id/tv_count_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:paddingRight="@dimen/cv_padding_6"
                android:textSize="@dimen/midl_text_size"
                android:layout_gravity="right"
                android:gravity="right" />
        </RelativeLayout>
        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/cv_padding_6"
            android:paddingBottom="@dimen/cv_padding_6">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_sum_order"
                android:paddingLeft="@dimen/cv_padding_6"
                android:textSize="@dimen/big_text_size"
                android:layout_gravity="left" />
            <TextView
                android:id="@+id/tv_sum_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:paddingRight="@dimen/cv_padding_6"
                android:textSize="@dimen/big_text_size"
                android:layout_gravity="right"
                android:gravity="right" />
        </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/cv_padding_6"
            android:textSize="@dimen/midl_text_size"
            android:text="@string/tv_et_description"/>
        <EditText
            android:id="@+id/et_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="3"/>
        <LinearLayout
            android:id="@+id/linl_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="bottom"
            android:layout_weight=".1"
            android:layout_toRightOf="@+id/btn_add_position"
            android:layout_toEndOf="@+id/btn_add_position"
            >
            <Button
                android:id="@+id/btn_add_position"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:layout_weight="5"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:text="@string/btn_add_position"

                />
            <Button
                android:id="@+id/btn_set_order"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/btn_set_order"
                android:layout_gravity="bottom"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:textColor="@color/colorAccent"
                android:layout_alignParentTop="true"
                android:layout_weight="6"
                android:layout_toRightOf="@+id/btn_add_position"
                android:layout_toEndOf="@+id/btn_add_position"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="bottom"
            android:id="@+id/linl_cancel"
            android:layout_weight=".1"
            android:layout_toRightOf="@+id/btn_add_position"
            android:layout_toEndOf="@+id/btn_add_position"
            android:visibility="gone">
            <Button
                android:id="@+id/btn_del_order"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/btn_del_order"
                android:layout_gravity="bottom"
                style="@style/Widget.AppCompat.Button.Borderless"/>
        </LinearLayout>
        </LinearLayout>
</LinearLayout>