<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/padding_10"
    android:paddingLeft="@dimen/padding_6"
    android:paddingBottom="@dimen/padding_10">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="@dimen/midl_text_size"
            android:text="@string/tv_cal_date"
            android:gravity="left" />
        <TextView
            android:id="@+id/tv_dialog_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/midl_text_size"
            android:layout_weight="1"
            android:gravity="left|center_horizontal" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/midl_text_size"
            android:text="@string/tv_cal_time"
            android:textStyle="bold"
            android:gravity="left" />
        <TextView
            android:id="@+id/tv_dialog_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/midl_text_size"
            android:gravity="left|center_horizontal" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="@dimen/midl_text_size"
            android:text="@string/dialog_type_holl"
            android:gravity="left" />
        <TextView
            android:id="@+id/tv_dialog_holl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/midl_text_size"
            android:gravity="left|center_horizontal" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="left">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="@dimen/midl_text_size"
            android:text="@string/dialog_count"
            android:gravity="left" />
        <TextView
            android:id="@+id/tv_dialog_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/midl_text_size"
            android:gravity="left|center_horizontal" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="@dimen/midl_text_size"
            android:text="@string/dialog_comment"
            android:gravity="left" />
        <TextView
            android:id="@+id/tv_dialog_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/midl_text_size"
            android:gravity="left|center_horizontal" />
    </LinearLayout>
</LinearLayout>