<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="5">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp">
            <ImageView
                android:id="@+id/imv_photo_dish"
                android:layout_width="@dimen/imv_size"
                android:layout_height="@dimen/imv_size"
                android:cropToPadding="false"
                android:scaleType="fitXY"
                android:maxWidth="@dimen/imv_size"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/blacktea" />
            <TextView
                android:id="@+id/tv_dish_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:textSize="@dimen/big_text_size"/>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:paddingLeft="@dimen/cv_padding_6"
                    android:textSize="@dimen/big_text_size"
                    android:text="@string/tv_price_dish"/>

                <TextView
                    android:id="@+id/tv_dish_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:paddingRight="@dimen/cv_padding_6"
                    android:gravity="end|right"
                    android:textSize="@dimen/big_text_size"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_weight_dish"
                    android:paddingLeft="@dimen/cv_padding_6"
                    android:layout_gravity="left"
                    android:textSize="@dimen/midl_text_size"/>
                <TextView
                    android:id="@+id/tv_dish_weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:paddingRight="@dimen/cv_padding_6"
                    android:gravity="end|right"
                    android:textSize="@dimen/midl_text_size"/>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_dish_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/cv_padding_6"
                android:textSize="@dimen/midl_text_size"/>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
    <Button
        android:id="@+id/btn_add_position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/btn_add_position"
        style="@style/Widget.AppCompat.Button.Borderless"/>
    </LinearLayout>
</LinearLayout>